# wwwloader

./: .gitignore  .rsyncignore  Cargo.toml  Dockerfile  README.md  build.sh  deploy.sh  docker_run.sh  dockerhub.sh  remote_build.sh  start.sh
deploy/: esm-admin
deploy/www/: index.html
deploy/www/css/: app.css  app.css.map
deploy/www/js/: app.js  app.js.map
example/: docker-compose.yaml  server.env
example/www2/: index.html
src/: config.rs  main.rs
www/: index.html
