[package]
name = "wwwloader"
version = "0.1.0"
authors = ["Ken Chong <thienpow@gmail.com>"]
edition = "2018"


[dependencies]
warp =  "0.3.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.1" }
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7.0"
serde_derive = "1.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
